# try-pretzelai

./: README.md  pyproject.toml  try-pretzel-duckdb.ipynb
.pretzel/: chat_history.json  titanic-pretzel_embeddings.json  try-pretzel-duckdb_embeddings.json
