[project]
name = "try-pretzelai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "pretzelai>=4.2.7",
    "duckdb>=1.0.0",
    "pandas>=2.2.2",
    "ydata-profiling>=4.8.3",
    "setuptools>=70.2.0",
    "ipywidgets>=8.1.3",
    "seaborn>=0.13.2",
    "matplotlib>=3.8.4",
    "itables>=2.1.4",
    "lxml>=5.2.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Apache 2.0"}


[tool.pdm]
distribution = false
